Add price change threshold setting and fire emoji indicator for volatile prices

--- a/package.json
+++ b/package.json
@@ -45,6 +45,14 @@
               "value": "coinmarketcap"
             }
           ]
+        },
+        {
+          "name": "priceChangeThreshold",
+          "title": "Price Change Threshold (%)",
+          "description": "Add a fire emoji when price change exceeds this percentage",
+          "type": "textfield",
+          "required": false,
+          "default": "5"
         }
       ]
     }
